Changed the Preson detail editor to panel. Prettified many things. Fixed a few bugs. Added visible  Logout option

--- a/css/person.css
+++ b/css/person.css
@@ -2,6 +2,9 @@
 #more-info {
 	display:none;
 }
+#more-options-area {
+	display: none;
+}
 
 #score-table {
 	width:40%;
